--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
+# DB setup
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/jdbc?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-
 spring.datasource.dbcp.test-while-idle = true
 spring.datasource.dbcp.validation-query = SELECT 1
 spring.jpa.show-sql = true
@@ -11,6 +12,9 @@ spring.jpa.hibernate.ddl-auto = create-drop
 spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.initialization-mode=always
 spring.session.jdbc.initialize-schema: always
+
+
+# Mail setup
 
 spring.mail.host = smtp.gmail.com
 mail.smtp.ssl.trust= smtp.gmail.com
