Added test runs in deploy steps - try 5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,9 @@ jobs:
 
       - run:
           name: Build and test
-          command: ./gradlew test
+          command: ./gradlew clean |
+            rm -rf ~/.gradle/caches/* |
+            ./gradlew test
 
       - store_test_results:
           path: build/test-results/test
