--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,8 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk
           environment:
-            - MYSQL_DATABASE: "jdbc"
-            - MYSQL_HOST: "127.0.0.1"
+            MYSQL_DATABASE: "jdbc"
+            MYSQL_HOST: "127.0.0.1"
       - image: circleci/mysql:5.7
           environment:
             MYSQL_ALLOW_EMPTY_PASSWORD: yes
