--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,14 @@ jobs:
             MYSQL_DATABASE: "jdbc"
             MYSQL_HOST: "127.0.0.1"
       - image: circleci/mysql:5.7
-          environment:
-            MYSQL_ALLOW_EMPTY_PASSWORD: yes
-            MYSQL_ROOT_PASSWORD: 'root'
+
+
+    environment:
+      MYSQL_DATABASE: "jdbc"
+      MYSQL_HOST: "127.0.0.1"
+      MYSQL_ALLOW_EMPTY_PASSWORD: yes
+      MYSQL_ROOT_PASSWORD: 'root'
+
     steps:
       - checkout
 
