--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           command: |
             dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
             sudo apt-get install default-mysql-client
-            mysql -h 127.0.0.1 -u root -proot test_db < data.sql
+#            mysql -h 127.0.0.1 -u root -proot test_db < data.sql
 
 
       - run:
