Added test runs in deploy steps - try 15

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,8 +47,9 @@ jobs:
 
       - run:
           name: Build and test
-          command: ./gradlew clean |
-            rm -rf ~/.gradle/caches/* |
+          command: |
+            ./gradlew clean
+            rm -rf ~/.gradle/caches/*
             ./gradlew test
 
       - store_test_results:
