--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - run:
           name: Install MySQL CLI; Import dummy data; run an example query
           command: |
-            dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
+            dockerize -wait tcp://localhost:3306 -timeout 120s
             sudo apt-get install default-mysql-client
 #            mysql -h 127.0.0.1 -u root -proot test_db < data.sql
 
